# ingest-rs

./: .gitignore  README.md  docker-compose.yml
ingest/: Cargo.toml
ingest/src/: main.rs
pymock/: app.py
