[package]
name = "ingest"
version = "0.1.0"
authors = ["allmywatts <allmywatts@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = { version = "2.0.0", features=["openssl"] }
futures = "0.3.1"
url = "2.0"
log = "0.4.0"
env_logger = "0.7.1"
serde = "1.0.110"
serde_json = "1.0.53"
bytes = "0.5.4"
anyhow = "1.0.31"
chrono = { version = "0.4", features = ["serde"] }

# https://crates.io/crates/elasticsearch